--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ h6 {
 	text-shadow: 1px 0 3px #000;
 }
 .appTitle {
-	
+	margin: 0 auto;
 }
 #timer {
 	margin: 0 auto;
@@ -124,6 +124,8 @@ h6 {
 }
 #xmasList {
 	margin-bottom: 20px;
+	width: 90%;
+	margin: 0 auto;
 }
 .xmasPara {
 	width: 80%;
@@ -192,6 +194,7 @@ h6 {
 }
 .social {
 	height: 100%;
+	padding-left: 100px;
 }
 h6.github {
 	width: 32px;
@@ -211,7 +214,7 @@ h6.linkedin {
 	text-indent: -9999px;
 	/*background: url("../img/linkedin-32.png") no-repeat;*/
 }
-h6.facebook {
+h6.codepen {
 	width: 32px;
 	height: 32px;
 	text-indent: -9999px;
